@@ -48,6 +48,7 @@ class cMpvPluginConfig
     string Languages;               // language string for audio and subtitle TODO move to Setup menu
     vector<string> PlaylistExtensions; // file extensions which are recognized as a playlist
     string MainMenuEntry;           // the text displayed in VDR main menu
+    int NoScripts;                  // don't load mpv LUA scripts
 
     string X11Display;              // X11 display used for mpv
     string TitleOverride;           // title to display (ovveride used via service interface)
