@@ -5,6 +5,7 @@
 - optical discs are now handled using the red key, the type (audio, dvd, br)
   is detected automatically
 - removed the first menu since it's now obsolete
+- added argument 's' to tell mpv not to load LUA scripts
 
 2015-06-29: vdr-mpv-0.0.4
 - start playback even when audio or video fails, this should give a better
